update thesis, presentation and ITE Simulation

--- a/presentation_report/thesis/biblio.bib
+++ b/presentation_report/thesis/biblio.bib
@@ -308,6 +308,37 @@ numpages = {13},
 series = {NIPS '21}
 }
 
+@article{friedman2010,
+ title={Regularization Paths for Generalized Linear Models via Coordinate Descent},
+ volume={33},
+ url={https://www.jstatsoft.org/index.php/jss/article/view/v033i01},
+ doi={10.18637/jss.v033.i01},
+ number={1},
+ journal={Journal of Statistical Software},
+ author={Friedman, Jerome H. and Hastie, Trevor and Tibshirani, Rob},
+ year={2010},
+ pages={1-22}
+}
+
+@article{breiman2001,
+author = {Breiman, Leo},
+title = {Random Forests},
+year = {2001},
+issue_date = {October 1 2001},
+publisher = {Kluwer Academic Publishers},
+address = {USA},
+volume = {45},
+number = {1},
+issn = {0885-6125},
+url = {https://doi.org/10.1023/A:1010933404324},
+doi = {10.1023/A:1010933404324},
+journal = {Mach. Learn.},
+month = oct,
+pages = {5-32},
+numpages = {28},
+keywords = {classification, ensemble, regression}
+}
+
 @article{calster2020,
 author = {Ben Van Calster and Maarten van Smeden and Bavo De Cock and Ewout W Steyerberg},
 title ={Regression shrinkage methods for clinical prediction models do not guarantee improved performance: Simulation study},
