--- a/presentation_report/thesis/msc_report.tex
+++ b/presentation_report/thesis/msc_report.tex
@@ -10,11 +10,18 @@
 
 \thispagestyle{empty}
 \begin{center}
-  \vspace*{6cm}{\bfseries\Huge
-  Neural Causal Models with TRAM-DAGs:\\[5mm]
-  Applied on real-world data \\[5mm]
-  and used for ITE estimation.
-  }
+
+
+	\vspace*{6cm}{\bfseries\Huge
+	Modeling Functional Relationships in Causal Graphs and Estimating Individualized Interventions:\\[5mm]
+	Neural Causal Models (TRAM-DAGs) and Conditional Average Treatment Effects
+	}
+
+  % \vspace*{6cm}{\bfseries\Huge
+  % Neural Causal Models with TRAM-DAGs:\\[5mm]
+  % Applied on real-world data \\[5mm]
+  % and used for ITE estimation.
+  % }
 
   \vfill
   \rm
