--- a/presentation_report/thesis/title.tex
+++ b/presentation_report/thesis/title.tex
@@ -7,11 +7,16 @@
 \begin{center}
 \setlength{\parindent}{0cm}
 \bf\Large% 
-Neural Causal Models with TRAM-DAGs: \\
-A framework for modelling causal effects in a flexible and \\
-interpretable way and for making subsequent causal queries.\\
+Modeling Functional Relationships in Causal Graphs \\
+and Estimating Individualized Interventions: \\
+Neural Causal Models (TRAM-DAGs) and \\
+Conditional Average Treatment Effects
+
 \normalfont
 
+% Neural Causal Models with TRAM-DAGs: \\
+% A framework for modelling causal effects in a flexible and \\
+% interpretable way and for making subsequent causal queries.\\
 
 
 \hrulefill
