--- a/presentation_report/thesis/header.sty
+++ b/presentation_report/thesis/header.sty
@@ -7,6 +7,7 @@
 
 % added by mike
 \usepackage{booktabs}  % needed for table?
+\usepackage{tabularx}  % needed for table?
 
 
 \usepackage[T1]{fontenc}       % provides fonts having  accented characters 
